[package]
name = "rparser"
version = "0.1.0"
authors = ["Sergey Shlykov <sshlykov@xiag.ch>"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
recap = { version = "0.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }